# helixerlite

./: Cargo.toml  README.md  pyproject.toml
.github/: ci.yaml
.github/workflows/: build-and-publish.yml  build.yml  ci.yaml  package.yml  publish-testpypi.yml  release.yml  test-artifacts.yml  test-publish.yml  test.yml
helixerlite/: __init__.py  __main__.py  hdf5.py  helixer_model.py  hybrid_model.py  log.py  utilities.py
src/: lib.rs  main.rs
src/analysis/: hmm.rs
src/bindings/: bindings.rs
tests/: test_import.py
tests/data/: genome_data.h5  predictions.h5
