[package]
name = "helixerpost"
version = "0.1.1"
authors = ["Tony Bolger <bolger.tony@gmail.com>", "Jonathan Palmer <nextgenusfs@gmail.com>"]
edition = "2021"

[dependencies]
hdf5 = "0.8.1"
ndarray = "0.15.6"
pyo3 = { version = "0.22.6", features = ["extension-module"] }

[lib]
name = "helixerpost"
crate-type = ["cdylib"]