[package]
name = "helixerpost"
version = "0.1.1"
authors = ["Tony Bolger <bolger.tony@gmail.com>", "Jonathan Palmer <nextgenusfs@gmail.com>"]
edition = "2018"

[dependencies]
hdf5 = { git = "https://github.com/10XGenomics/hdf5-rust.git", branch = "conda_nov2021" }
ndarray = "0.15"
pyo3 = { version = "0.22.6", features = ["extension-module"] }

[lib]
name = "helixerlite"
crate-type = ["cdylib"]

[features]
default = ["pyo3/extension-module"]