[package]
name = "helixerlite"
version = "0.1.1"
authors = ["Tony Bolger <bolger.tony@gmail.com>", "Jonathan Palmer <nextgenusfs@gmail.com>"]
edition = "2021"

[dependencies]
hdf5 = { git = "https://github.com/10XGenomics/hdf5-rust.git", branch = "conda_nov2021", features = ["conda"] }
ndarray = "0.15"
pyo3 = { version = "0.22.5", features = ["extension-module"] }

[lib]
name = "helixerpost"
crate-type = ["cdylib"]
